# remote-apis-sdks

./: .bazelrc  MODULE.bazel  WORKSPACE  go.mod  go.sum  go_deps.bzl
.githooks/: pre-commit
go/api/command/: BUILD.bazel
go/api/credshelper/: BUILD.bazel
go/pkg/balancer/: BUILD.bazel
go/pkg/cas/: BUILD.bazel
go/pkg/client/: BUILD.bazel  client.go
go/pkg/fakes/: BUILD.bazel
go/pkg/fakes/auxpb/: BUILD.bazel
go/pkg/flags/: BUILD.bazel
go/pkg/tool/: BUILD.bazel
