module(
    name = "bazel_remote_apis_sdks",
    version = "",
)

bazel_dep(name = "protobuf", version = "27.3")
bazel_dep(name = "rules_proto", version = "6.0.2")
bazel_dep(name = "rules_go", version = "0.49.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.38.0", repo_name = "bazel_gazelle")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.gazelle_override(
    build_file_generation = "clean",
    directives = [
        "gazelle:proto disable",
    ],
    path = "github.com/bazelbuild/remote-apis",
)
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_bazelbuild_remote_apis",
    "com_github_golang_glog",
    "com_github_google_go_cmp",
    "com_github_google_uuid",
    "com_github_hectane_go_acl",
    "com_github_klauspost_compress",
    "com_github_pkg_xattr",
    "com_google_cloud_go_longrunning",
    "org_golang_google_api",
    "org_golang_google_genproto_googleapis_bytestream",
    "org_golang_google_genproto_googleapis_rpc",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_oauth2",
    "org_golang_x_sync",
)
